--- a/capstone.html
+++ b/capstone.html
@@ -270,7 +270,7 @@
 								    <textarea class="form-control border-5 border-dark" id="exampleFormControlTextarea1" rows="5"></textarea>
 								  </div>
 								 <!-- Button trigger modal -->
-								 <button type="button" class="btn btn-primary bg-primary border-5 border-dark" data-toggle="modal" data-target="#exampleModal">
+								 <button type="button" class="btn btn-primary bg-success text-light border-5 border-dark" data-toggle="modal" data-target="#exampleModal">
 								   Send Comment
 								 </button>
 
